locale/de update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6758 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -1,4 +1,4 @@
-# German language file (2011-03-19, r6196)
+# German language file (2011-07-17, r6757)
 # utf-8 encoded de-DE
 # Edited by Mod-spambot (TeamID: 333791)
 
@@ -36,7 +36,8 @@ foxtrick.Ratings.VnukStats=VnukStats
 foxtrick.Ratings.HTitaVal=HTitaVal
 foxtrick.Ratings.GardierStats=GardierStats
 foxtrick.BookmarkAdjust.desc=Icons in Verbindung mit einem Bookmark-Eintrag in den Bookmarks-Kommentaren können wie folgt hinzugefügt werden: z.B: [cyan] - zeigt ein cyanfarbenes Icon an. Mögliche Werte: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow.
-oxtrick.MedianTransferPrice.desc=Zeigt den Medianpreis im Transfervergleich an
+#MedianTransferPrice
+foxtrick.MedianTransferPrice.desc=Zeigt den Medianpreis im Transfervergleich an
 foxtrick.FlagCollectionToMap.desc=Anzeige einer Weltkarte mit allen gesammelten Flaggen
 foxtrick.TransferSearchFilters.desc=Ermöglicht die Nutzung von Filtern in der Transfermarktsuche
 foxtrick.TransferSearchResultFilters.desc=Zusätzliche Optionen zum Filtern der Ergebnisse der Transfermarktsuche
@@ -65,6 +66,8 @@ foxtrick.ForumYouthIcons.youth_series.desc=Icon für YouthSeriesID hinzufügen
 foxtrick.ForumYouthIcons.enlarge_input.desc=Vergrößern von Textboxen für besseres Schreiben
 foxtrick.ForumYouthIcons.pre.desc=Icon für Forum 'pre'-Format hinzufügen
 foxtrick.ForumYouthIcons.table.desc=Icon für Forum 'table'-Format hinzufügen
+foxtrick.ForumYouthIcons.debug.desc=Icon für FoxTrick debug log hinzufügen
+foxtrick.ForumYouthIcons.settings.desc=Icon für Foxtrickeinstellungen hinzufügen 
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Ersetzt FoxTrick HT-ML-Tags zu HTML-Tags (z.B. 'pre'-Element)
 foxtrick.CopyPostID.desc=Kopiert die PostId in die Zwischenablage anstelle die komplette ID anzuzeigen
@@ -171,13 +174,13 @@ foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Anzeige des Saisongehalts
 foxtrick.FixcssProblems.desc=Behebt einige visuelle Probleme auf verschiedenen Seiten
 foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Behebt Problem abgeschnittener Teamnamen im linken Menu
 foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Behebt Probleme unsichtbarer FoxLink-Bilder im Kopf von Forenposts
+foxtrick.FixcssProblems.HideInvitation.desc='Einladen' im Untermenü verbergen
 foxtrick.FixcssProblems.Page_Minimum_Height.desc=Behebt das Springen der Seite wenn keine Scrollbalken angezeigt werden
-foxtrick.FixcssProblems.MatchOrder_Lineheight.desc=Behebt das Problem der verschobenen Selectboxen in der Aufstellung
 foxtrick.FixcssProblems.RTL_Fixes.desc=Behebt einige Anzeigefehler von HT bei RTL-Sprachen
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Hinzufügen fester Scrollbalken zum Forum - weniger störend als die der HTs
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Vergrößerte Darstellung kleiner Schriften (small font)
 foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Entferne 'Forum Vorschau' auf allen Seiten.
-
+foxtrick.FixcssProblems.CalendarAutoMinHeight.desc=Automatische Mindestgrösse des Kalenders um Platz zu sparen
 foxtrick.SimplePresentation.desc=Zusätzliche Präsentations-Einstellungen
 foxtrick.SimplePresentation.League_Table.desc=Hinzufügen vertikaler Linien zur Ligatabelle für bessere Lesbarkeit
 foxtrick.SimplePresentation.Guestbook.desc=Erhöht die Lesbarkeit von Gästebuch-Einträgen (grauer Hintergrund für den Text)
@@ -206,13 +209,13 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Vergrössern der Linkleiste
 foxtrick.ExtraShortcuts.Supporterstats.desc=Linkicon für Supporterstatistiken
 foxtrick.ExtraShortcuts.Transfers.desc=Linkicon für die Transferübersicht des eigenen Teams
 foxtrick.ExtraShortcuts.Prefs.desc=Linkicon zur Einstellungen-Seite
-
+foxtrick.ExtraShortcuts.ManageCHPP.desc=Linkicon zu den CHPP-Einstellungen
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Linkicon zu den FoxTrick-Einstellungen
-foxtrick.ExtraShortcuts.HtRadio.desc=Linkicon für Hattrick Radio (Belgium/Netherlands)
-
-
-
-foxtrick.ExtraShortcuts.Downtime.desc=Linkicon für Radio downtime (DACHL) (Winamp)
+foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
+foxtrick.ExtraShortcuts.No9.desc=No9 Radio
+foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
+foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
+foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 #CopyMatchID
 foxtrick.CopyMatchID.desc=Kopiert die MatchID in die Zwischenablage beim Klick auf ein Liga/Pokal/Friendly-Icon im Spielplan bzw. im Archiv. Für Supporter funktioniert das auch beim direkten Vergleich zweier Mannschaften (Tabs 'Letzte Spiele' und 'Frühere Duelle').
 foxtrick.HeaderFix.desc=Fixiert beim Scrollen den Kopfbereich und das linke Menü (betrifft auch andere HT-Seiten)
@@ -227,13 +230,13 @@ foxtrick.ContextMenuCopy.Link.desc=Option zum Kopieren von Links in HT-ML
 foxtrick.ContextMenuCopy.HtMl.desc=Option zum Kopieren des ausgewählten Bereiches in HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Option zum Kopieren von Tabellen in HT-ML
 foxtrick.NewMail.desc=Deutlicheres Hervorheben des Eintreffens neuer Mails
-
-
-
-
-
-
-
+foxtrick.NewMail.NotifyMail.desc=Popup bei neuer HT-Post
+foxtrick.NewMail.NotifyForum.desc=Popup bei Forenantworten
+foxtrick.CopyYouth.desc=Kopierfunktionen für Jugendreports und Seitenquellen
+foxtrick.CopyYouth.TrainingReport.desc=Trainingsreport
+foxtrick.CopyYouth.ScoutComment.desc=Scoutkommentar
+foxtrick.CopyYouth.PlayerSource.desc=Spielerseitenquelle
+foxtrick.CopyYouth.FixturesSource.desc=Spielplanseitenquelle
 foxtrick.PlayerBirthday.desc=Anzeige kommender und aktueller Geburtstage von Spielern in der Übersicht
 foxtrick.MovePlayerSelectbox.desc=Verschieben der Spielerauswahl-Box nach oben auf der Übersichtsseite
 foxtrick.SeasonStats.desc=Anzeige einiger Statistiken auf der Archivseite
@@ -279,7 +282,7 @@ foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Verberge unbekannte Skills auf d
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Verberge das Wort 'maximal' um mehr Platz zu erhalten wenn die Gesichter angezeigt werden
 foxtrick.SkillTable.desc=Anzeige bekannter Skills als Tabelle
 foxtrick.SkillTable.OtherTeams.desc=Die Skilltable auch für fremde Teams anzeigen
-
+foxtrick.SkillTable.ColouredYouth.desc=Farbige Jugendskills nach Potenzial etc
 #HighlightCupwins
 foxtrick.HighlightCupwins.desc=Hervorheben des Siegers bei Pokalspielen
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Sieger in der Pokalübersicht hervorheben, falls es mit einem niedrigerem Pokalranking (Heimteam) antrat
@@ -312,7 +315,7 @@ foxtrick.ForumThreadAutoIgnore.Tags.desc=Liste der Tags, ZB: NT, idea, Bug. Komm
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist von Themen nach ID (der Teil vor dem Punkt). Themen in der Whitelist werden nicht ignoriert. Komma getrennt.
 foxtrick.TableSort.desc=Macht alle 'richtigen' Tabellen mit Kopfzeile in Hattrick sortierbar (inklusive Tabellen in Postings)
 foxtrick.LiveAlert.desc=HT Live Toralarm
-
+foxtrick.LiveAlert.Sound.desc=Zusätzlich mit Alarmton
 foxtrick.OldStyleFace.desc=Anzeige der Gesichter im alten HT style
 foxtrick.NtPeek.desc=Anzeige von NT/U20 Spielen auf der Länderseite und bei Mein Hattrick
 foxtrick.SeriesFlags.desc=Anzeige des Liga-Icons bei User- und/oder Team-Links (Icons von HTMS)
@@ -332,13 +335,13 @@ foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Verberge die Sekretärin
 foxtrick.MyMonitor.desc=Beobachte aktuelle Spiele von Freunden und Gegnern unter 'Mein Hattrick'
 foxtrick.MarkAllAsRead.desc=Ein Button, um alle Threads im Forum als gelesen zu markieren
 foxtrick.ShowFriendlyBooked.desc=Zeige auf der Ligaseite an, ob ein Team ein Freundschaftsspiel gebucht hat
-
-
-
-
-
-
-
+foxtrick.ShowFriendlyBooked.OnDemand.desc=Anzeige nur nach Bedarf
+foxtrick.TickerAlert.desc=Popup bei neuen Tickererignissen. Textfeld leer lassen für Popups ohne extra Alarmton 
+foxtrick.ShowLineupSet.desc=Hervorheben in der Letzter Spieltag/Kommender Spieltag-Tabelle von Vereinen, die ihre Aufstellung gesetzt haben, resp. die das letzte Spiel gewonnen haben
+foxtrick.ShowLineupSet.LineupSet.desc=Hervorheben von gesetzten Aufstellungen
+foxtrick.ShowLineupSet.Ownerless.desc=Hervorheben von Vereinen ohne Besitzer
+foxtrick.ShowLineupSet.Winning.desc=Hervorheben von Gewinners
+foxtrick.SupporterStatsEnhancements.desc=Markierung für Spieler des aktuellen Teams in den Supporterstatistiken
 
 # -----------------------------------------------------------------------------
 
@@ -348,9 +351,9 @@ foxtrick.ShowFriendlyBooked.desc=Zeige auf der Ligaseite an, ob ein Team ein Fre
 #icons
 foxtrick.ExtraShortcuts.statistics=Statistiken
 foxtrick.ExtraShortcuts.transfers=Transfers
+foxtrick.ExtraShortcuts.ManageCHPP=Deine CHPP Produkte
 foxtrick.ExtraShortcuts.prefs=Einstellungen
 foxtrick.ExtraShortcuts.ftprefs=FoxTrick-Einstellungen
-
 
 #HistoryStats
 foxtrick.HistoryStats.season=Saison
@@ -445,6 +448,11 @@ ForumYouthIcons.youthplayerid=Jugendspieler verlinken
 ForumYouthIcons.youthteamid=Jugendteam verlinken
 ForumYouthIcons.youthmatchid=Link zu Jugendspiel einfügen
 ForumYouthIcons.youthseries=Link zu Jugendliga einfügen
+
+ForumOtherIcons.label=Weitere
+ForumOtherIcons.debug=FoxTrick debug log einfügen.
+ForumOtherIcons.settings=FoxTrick Einstellungen einfügen.
+
 #special bbcode, not really youth icons
 ForumSpecialBBCode.q=Zitieren einfügen
 ForumSpecialBBCode.br=Zeilenumbruch einfügen
@@ -479,17 +487,17 @@ foxtrick.datetimestrings.short_days=T
 transfercompare_medianprice=Medianpreis
 transfercompare_avgprice=Durchschnittspreis
 
-
-
-
-
-
-
-
-
-
-
-
+match.type.league=Liga
+match.type.qualification=Qualifikation
+match.type.cup=Pokal
+match.type.friendly=Freundschaftspiel
+match.type.friendly.cup=Freundschaftspiel(Pokalregeln)
+match.type.masters=Hattrick Masters
+match.type.nt.friendly=Nationales Freundschaftspiel
+match.type.nt.competitive=World Cup
+match.type.youth.league=Jugendliga
+match.type.youth.friendly=Jugendfreundschaftspiel
+match.type.youth.friendly.cup=Jugendfreundschaftspiel (Pokalregeln)
 
 #Skills
 Playmaking=Spielaufbau
@@ -507,10 +515,12 @@ Keeper.abbr=TW
 Set_pieces=Standards
 Set_pieces.abbr=ST
 
+PsicoTSI=PsicoTSI (durchschittliche Form)
+PsicoTSI.abbr=Psico
 HTMS_Ability=HTMS Fähigkeitspunkte
-HTMS_Ability.abbr=Fähigkeit
+HTMS_Ability.abbr=Fähigkp.
 HTMS_Potential=HTMS Potentialpunkte
-HTMS_Potential.abbr=Potential
+HTMS_Potential.abbr=Potp.
 
 PlayerCategory=Spielerkategorie
 PlayerCategory.abbr=Ka
@@ -599,11 +609,16 @@ Current_club.abbr=Verein
 Current_league=Aktuelle Liga
 Current_league.abbr=Liga
 
-
-
+JoinedSince=Im Verein seit
+JoinedSince.abbr=Seit
+HomeGrown=Jugendspieler
+HomeGrown.abbr=Jugi
 
 Hotlist=Beobachten
 Hotlist.abbr=Beob.
+
+skilltable.youthplayer=Jugendspieler
+skilltable.rebought_youthplayer=zurückgekaufter Jugendspieler
 
 #matchdetail
 foxtrick.matchdetail.midfield=Mittelfeld
@@ -657,12 +672,11 @@ notify.newForumMessage=Es gibt %s neue Forenantworte(n) an dich.
 
 htLive=HT Live
 
-
 foxtrick.modules_allpages=globale Module
 HTLanguageChanged=In den Grundeinstellungen ist eingestellt, dass die FoxTrick-Sprache automatisch angepasst wird, wenn die Sprache bei HT geändert wird. Deine FoxTrick-Sprache ist jetzt: %s.
 
 Coach=Trainer
-
+CurrentSquad=Aktuelles Team
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
@@ -746,7 +760,7 @@ TeamPopupLinks.prefsCaption=Link-Einstellungen
 TeamPopupLinks.ShowByDefault=Standardanzeige
 TeamPopupLinks.ShowOnMore=Anzeige bei 'mehr...'
 
-total_stars=Summe der erzielten Sterne
+total_stars=Summe der Sterne
 
 # FlagCollectionToMap
 foxtrick.FlagCollectionToMap.ShowMap=Karte anzeigen
@@ -759,7 +773,7 @@ foxtrick.FlagCollectionToMap.SAmerica=Südamerika
 foxtrick.FlagCollectionToMap.World=Welt
 
 # SkillTable
-Skill_table=Skilltabelle
+Skill_table=Fähigkeitentabelle
 
 Nationality=Nationalität
 Nationality.abbr=Nat
@@ -772,6 +786,8 @@ Age.abbr=Jhr
 Match=Spiel
 Series=Liga
 
+TransferCompare=TransferCompare
+TransferCompare.abbr=TC
 Bookmark=Favoriten
 Bookmark.abbr=Fav
 Deadline=Deadline
@@ -806,10 +822,10 @@ foxtrick.RapidId.ViewById=Anzeige nach ID
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Wechselt die Ansicht der Tabelle
-
-
-
-
+foxtrick.SkillTable.Add_homegrown_title=Alle eigengewächse des aktuellen Teams zufügen
+foxtrick.SkillTable.Remove_bot_players_title=Spieler von Botvereinen entfernen
+foxtrick.SkillTable.showTimeInClub_title=Zeit des Vereinsbeitritts anzeigen
+foxtrick.SkillTable.detach=Detach
 
 # External Chat
 foxtrick.LeagueAndMatchChat.MatchChat=Non HT Spielchat
@@ -865,20 +881,20 @@ ticker.type.mail=Post an mich
 ticker.type.myht=My Hattrick Nachrichten
 ticker.type.others=Andere
 
-
-
-
-
-
+# LocalTime
+LocalTime.hattrick=Hattrickzeit
+LocalTime.hattrick.title=Anzeige in Hattrickzeit. Klicken um zur Lokalzeit zu wechseln.
+LocalTime.local=Lokalzeit
+LocalTime.local.title=Anzeige in Lokalzeit. Klicken um zur Hattrickzeit zu wechseln.
 
 #actions
 Copy=Kopieren
 View=Anzeigen
 Switch_view=Ansicht wechseln
-
-
-
-
+Detach=Detach
+AddHomegrown=Eigengewächse zufügen
+RemoveBotPlayers=Botspieler entfernen
+showTimeInClub=Zeit im Verein anzeigen
 Filter=Filter
 
 # buttons
@@ -896,12 +912,12 @@ button.import=Importiere
 button.restoreDefault=Standard wiederherstellen
 button.disableAll=Alles deaktivieren
 
-Loading=Lade…
+status.loading=Lade…
 status.loading.abbr=…
 status.error=Fehler
 status.error.abbr=!
-
-
+status.unknown=Unbekannt
+status.unknown.abbr=?
 
 oauth.authorize=Autorisiere FoxTrick den Zugriff auf deine Teamdaten
 oauth.instructions=Ein Link zu chpp.hattrick.org wird in Kürze erscheinen.\nÖffne den Link, Trage deinen Nutzernamen und Passwort ein um einen Bestätigungscode zu erhalten. Kopiere den Code in die untenstehende Zeile um FoxTrick den Zugriff auf deine Teamdaten zu erlauben.\nFoxTrick wird während des gesamten Prozesses dein Passwort NICHT erfahren.
@@ -931,12 +947,15 @@ status.enabled=eingeschaltet aber nicht auf %s
 status.disabled=abgeschaltet
 
 prefs.screenshot=Screenshot
+
 # tabs in preferences page
 #tabs
 tab.main=Grundeinstellungen
+tab.pagefiltered=Seitenmodule
+tab.allfiltered=Universalmodule
 tab.informationAggregation=Information
 tab.shortcutsAndTweaks=Shortcuts & Erweiterungen
-tab.presentation=Darstellung & Tweaks
+tab.presentation=Darstellung
 tab.matches=Spiele
 tab.forum=Forum
 tab.links=Links
@@ -970,6 +989,7 @@ foxtrick.prefs.disableTemporaryLabel=FoxTrick vorübergehend deaktivieren
 foxtrick.prefs.saved=Einstellungen gespeichert!
 foxtrick.prefs.loaded=Einstellungen geladen!
 foxtrick.prefs.dismissNotice=(Klicke um diese Notiz zu verbergen)
+foxtrick.prefs.disableOauth=OAuth deaktivieren
 
 link.title=Links
 link.homepage=Homepage
@@ -989,6 +1009,9 @@ about.projectOwners=Project Owners
 about.developers=Developers
 about.translators=Translators
 about.designers=Designers
+
+filter.all=Nach Kategorie
+filter.page=Nach letzte HT-Seite
 
 delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?\n FireFox muss danach neu gestartet werden!
 disable_all_foxtrick_modules_ask=Sollen wirklich alle Module deaktiviert werden?\n
