--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -206,7 +206,7 @@ foxtrick.GuestbookAlltidFlags.HideAnswerToLinks.desc=Skrýva "odpovedať na" odk
 foxtrick.SkinPlugin.desc=Pridáva vlastný CSS skin pre Hattrick
 ffoxtrick.SkinPlugin.Skin1.desc=Aktivuje skin 1 (štýl odkazov)
 foxtrick.SkinPlugin.Skin2.desc=Aktivuje skin 2 (štýl odkazov)
-oxtrick.CurrencyConverter.desc=Konvertuje menu na HT
+foxtrick.CurrencyConverter.desc=Konvertuje menu na HT
 foxtrick.MovePlayerStatement.desc=Presúva prehlásenie hráča do hráčovho obrázku, ak obrázky sú vypnuté, prehlásenie nebude zobrazené.
 foxtrick.TickerColoring.desc=Vyfarbenie rôznych typov udalostí v tickeri.
 #ExtraShortcuts
