--- a/HACKING
+++ b/HACKING
@@ -84,7 +84,7 @@ specifications:
 # A property named MODULE_NAME, which is the name of the module, named in the
   way like "SkillTable".
 # A property named MODULE_CATEGORY, which specifies its category. You can look
-  up the list of categories in the file content/const.js.
+  up the list of categories in the file content/env.js.
 # A property named PAGES, which is an array containing the pages that the module
   should run on. The pages are listed at content/pages.js.
 # There are also other properties including OPTIONS, CSS, etc.
