Serbian Translation update (typos)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6819 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -633,14 +633,14 @@ Current_league.abbr=Држава
 
 JoinedSince=Време проведено у клубу
 JoinedSince.abbr=У клубу
-HomeGrown=Играч и омладинског погона
-HomeGrown.abbr=ОМ
+HomeGrown=Играчи из омладинског погона
+HomeGrown.abbr=ОП
 
 Hotlist=Маркирај трансфер
 Hotlist.abbr=МТ
 
-skilltable.youthplayer=омладинац
-skilltable.rebought_youthplayer=поново купљени омладинац
+skilltable.youthplayer=играч из омладинског погона
+skilltable.rebought_youthplayer=поново купљени играч из омладинског погона
 
 #matchdetail
 foxtrick.matchdetail.midfield=Везни ред
