Missed an obvious thing. Adding!
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6825 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -1053,7 +1053,7 @@ CrossTable.noMatches=Inga matcher har spelats än.
 
 # MyMonitor
 MyMonitor.header=Mina Bevakningar
-
+MyMonitor.teams=%s lag i listan
 MyMonitor.add=Lägg till lag
 MyMonitor.remove=Ta bort lag
 MyMonitor.addHelp=Gå till det lag du vill bevaka, och du kan se en ruta i högerkolumnen för att lägga till laget.
