Swedish! Editing some general translations on the SkillTable nodule and also editing some abbr. that was double
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6834 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -722,15 +722,15 @@ TransferListed=Transferlistad
 TransferListed.abbr=TL
 
 NrOfMatches=Antal spelade matcher
-NrOfMatches.abbr=ASM
-LeagueGoals=Seriemål
-LeagueGoals.abbr=SM
-CupGoals=Cupmål
-CupGoals.abbr=CM
-FriendliesGoals=Träningsmål
-FriendliesGoals.abbr=TM
-CareerGoals=Karriärmål
-CareerGoals.abbr=KM
+NrOfMatches.abbr=S
+LeagueGoals=Mål i serien
+LeagueGoals.abbr=MS
+CupGoals=Mål i cupen
+CupGoals.abbr=MC
+FriendliesGoals=Mål i träningsmatcher
+FriendliesGoals.abbr=MT
+CareerGoals=Mål i karriären
+CareerGoals.abbr=MK
 Hattricks=Hattricks
 Hattricks.abbr=HT
 
@@ -739,10 +739,10 @@ Current_club.abbr=Klubb
 Current_league=Nuvarande liga
 Current_league.abbr=Liga
 
-JoinedSince=Joined since
-JoinedSince.abbr=Since
-HomeGrown=Youthplayer
-HomeGrown.abbr=YP
+JoinedSince=Tid i klubben
+JoinedSince.abbr=TIK
+HomeGrown=Egen juniorspelare
+HomeGrown.abbr=JS
 
 
 
