change some translate
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6922 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -872,7 +872,7 @@ status.error.abbr=!
 status.unknown=شناسايي نشده
 status.unknown.abbr=?
 
-oauth.authorize=نه فاکس تريک اجازه دسترسي به اطلاعات تيمتان را بدهيد
+oauth.authorize=به فاکس تريک اجازه دسترسي به اطلاعات تيمتان را بدهيد
 oauth.instructions=پيوندي به سايت برنامه هاي کمکي هت تريک به شما نمايش داده خواهد شد روي ان کليک کرده و سپس اطلاعات خواسته شده را وارد کنيد 
 oauth.why=چرا بايد به فاکس تريک اجازه دسترسي به اطلاعات تيمم را بدهم ؟
 oauth.link=گرفتن کد فعال سازي از chpp.hattrick.org
