renamed double sendmessage string
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6956 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -439,7 +439,7 @@ delete_template_ask=Delete template?
 #PostPreview
 show_preview_from_post=Display a preview of the posting
 preview=Preview
-sendmessage=Send
+forumPreview.send=Send
 
 #Forums
 foxtrick.CopyPostID=Copy PostID to clipboard
