--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -433,7 +433,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Паказваць перадпрагляд паведамленьня
 preview=Перадпрагляд
-sendmessage=Даслаць
+forumPreview.send=Даслаць
 
 #Forums
 foxtrick.CopyPostID=Капіяваць PostID
