--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -431,7 +431,7 @@ ok=D'acord
 #PostPreview
 show_preview_from_post=Vista prèvia del missatge
 preview=Vista prèvia
-sendmessage=Envia
+forumPreview.send=Envia
 
 #Forums
 foxtrick.CopyPostID=Copia la id de missatge al porta-retalls
