--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -422,7 +422,7 @@ delete_template_ask=Odstranit šablonu?
 #PostPreview
 show_preview_from_post=Zobrazit náhled příspěvku
 preview=Náhled
-sendmessage=Poslat
+forumPreview.send=Poslat
 
 #Forums
 foxtrick.CopyPostID=Kopírovat ID příspěvku do schránky
