--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -429,7 +429,7 @@ delete_template_ask=Vorlage löschen?
 #PostPreview
 show_preview_from_post=Vorschau des Postings anzeigen
 preview=Vorschau
-sendmessage=Absenden
+forumPreview.send=Absenden
 
 #Forums
 foxtrick.CopyPostID=In die Zwischenablage kopieren
