--- a/content/locale/es/foxtrick.properties
+++ b/content/locale/es/foxtrick.properties
@@ -419,7 +419,7 @@ delete_template_ask=¿Borrar la plantilla?
 #PostPreview
 show_preview_from_post=Mostrar vista previa del mensaje
 preview=Vista previa
-sendmessage=Enviar
+forumPreview.send=Enviar
 
 #Forums
 foxtrick.CopyPostID=Copiar ID del mensaje al portapapeles
