--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -422,7 +422,7 @@ delete_template_ask=¿Borrar plantilla?
 #PostPreview
 show_preview_from_post=Mostrar Vista previa del mensaje
 preview=Vista previa
-sendmessage=Enviar
+forumPreview.send=Enviar
 
 #Forums
 foxtrick.CopyPostID=Copiar al Portapapeles el ID del mensaje
