--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -178,7 +178,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Amosa unha previsualización da mensaxe
 preview=Previsualización
-sendmessage=Enviar
+forumPreview.send=Enviar
 
 #Forums
 foxtrick.CopyPostID=Copiar ao portapapeis
