--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -447,7 +447,7 @@ delete_template_ask=Törlöd a sablont?
 #PostPreview
 show_preview_from_post=Megnézem a hozzászólás előnézetét
 preview=Előnézet
-sendmessage=Küldés
+forumPreview.send=Küldés
 
 #Forums
 foxtrick.CopyPostID=A hozzászólás számának vágólapra másolása
