--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -421,7 +421,7 @@ delete_template_ask=Eyða sniðmáti?
 #PostPreview
 show_preview_from_post=Sýna forskoðun á svari
 preview=Forskoðun
-sendmessage=Senda
+forumPreview.send=Senda
 
 #Forums
 foxtrick.CopyPostID=Afrita svarnúmer á klippiborð
