--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -486,7 +486,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Visualizza anteprima del messaggio
 preview=Anteprima
-sendmessage=Invia
+forumPreview.send=Invia
 
 #Forums
 foxtrick.CopyPostID=Copia ID messaggio negli appunti
