--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -330,7 +330,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Message prévisualiséieren
 preview=Previsualiséieren
-sendmessage=Schécken
+forumPreview.send=Schécken
 
 #Forums
 foxtrick.CopyPostID=ID vum Message an d'Tëschepalette kopéieren
