--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -180,7 +180,7 @@ ok=Gerai
 #PostPreview
 show_preview_from_post=Rodyti, kaip atrodys žinutė
 preview=Peržiūrėti
-sendmessage=Siųsti
+forumPreview.send=Siųsti
 
 #Forums
 foxtrick.CopyPostID=Nukopijuoti žinutės ID
