--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -417,7 +417,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Podgląd posta
 preview=Podgląd
-sendmessage=Wyślij
+forumPreview.send=Wyślij
 
 #Forums
 foxtrick.CopyPostID=Kopiuj postID do schowka
