--- a/content/locale/pt/foxtrick.properties
+++ b/content/locale/pt/foxtrick.properties
@@ -192,7 +192,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Mostrar uma previsão do novo post
 preview=Prever
-sendmessage=Enviar
+forumPreview.send=Enviar
 
 #Forums
 foxtrick.CopyPostID=Copiar para a área de transferência
