--- a/content/locale/pt_BR/foxtrick.properties
+++ b/content/locale/pt_BR/foxtrick.properties
@@ -277,7 +277,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Mostrar uma previa do post
 preview=Preview
-sendmessage=Enviar
+forumPreview.send=Enviar
 
 #Forums
 foxtrick.CopyPostID=Copiar para Area de Tranferencia
