--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -432,7 +432,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Zobrazit náhľad príspevku
 preview=Náhľad
-sendmessage=Poslať
+forumPreview.send=Poslať
 
 #Forums
 foxtrick.CopyPostID=Kopírovať do schránky
