--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -335,7 +335,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Trego paraqitjen e postimit
 preview=Paraqitje
-sendmessage=Dërgo
+forumPreview.send=Dërgo
 
 #Forums
 foxtrick.CopyPostID=Kopjo PostimID te tabela
