--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -446,7 +446,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Прегледај поруку пре слања
 preview=Изглед поруке
-sendmessage=Пошаљи
+forumPreview.send=Пошаљи
 
 #Forums
 foxtrick.CopyPostID=Кликни да ископираш ИД поруке у меморију
