--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -552,7 +552,7 @@ delete_template_ask=Ta bort mall?
 #PostPreview
 show_preview_from_post=Visa en förhandsgranskning av inlägget
 preview=Förhandsgranskning
-sendmessage=Skicka
+forumPreview.send=Skicka
 
 
 
