--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -412,7 +412,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Hiển thị sự duyệt một bài đã đăng
 preview=Xem trước
-sendmessage=Gửi
+forumPreview.send=Gửi
 
 #Forums
 foxtrick.CopyPostID=Sao chép ID bài đã đăng vào bộ nhớ tạm
