--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -417,7 +417,7 @@ delete_template_ask=删除模板?
 #PostPreview
 show_preview_from_post=显示文章预览
 preview=预览
-sendmessage=发送
+forumPreview.send=发送
 
 #Forums
 foxtrick.CopyPostID=将帖子 ID 复制到剪帖版
