--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -428,7 +428,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Prikaži izgled poruke prije slanja
 preview=Izgled poruke
-sendmessage=Pošalji
+forumPreview.send=Pošalji
 
 #Forums
 foxtrick.CopyPostID=Kopiraj postID u clipboard
