--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -179,7 +179,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Display a preview of the posting
 preview=Preview
-sendmessage=Send
+forumPreview.send=Send
 
 #Forums
 foxtrick.CopyPostID=Copy postId to clipboard
