--- a/content/locale/es_SU/foxtrick.properties
+++ b/content/locale/es_SU/foxtrick.properties
@@ -437,7 +437,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Mostrar Vista previa del mensaje
 preview=Vista previa
-sendmessage=Enviar
+forumPreview.send=Enviar
 
 #Forums
 foxtrick.CopyPostID=Copiar al Portapapeles el ID del mensaje
