--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -414,7 +414,7 @@ delete_template_ask=Sjabloon verwijderen?
 #PostPreview
 show_preview_from_post=Toon een voorbeeld van het bericht
 preview=Voorbeeld
-sendmessage=Verstuur
+forumPreview.send=Verstuur
 
 #Forums
 foxtrick.CopyPostID=Kopieer bericht-ID naar klembord
