--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -179,7 +179,7 @@ ok=OK
 #PostPreview
 show_preview_from_post=Forhåndsvis posten
 preview=Preview
-sendmessage=Send
+forumPreview.send=Send
 
 #Forums
 foxtrick.CopyPostID=Kopier til utklippstavle
