locale/de/foxtrick.properties: short copy icons desc
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7014 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -433,7 +433,7 @@ forumPreview.send=Absenden
 
 #Forums
 foxtrick.CopyPostID=In die Zwischenablage kopieren
-CopyPosting=Kopiere Posting im %s Stil in die Zwischenablage
+CopyPosting=Kopiere Posting im %s Stil
 CopyPosting.abbr=Kopiere im %s Stil
 CopyPosting.style.ht-ml=HT-ML
 CopyPosting.style.wiki=Wiki
@@ -680,7 +680,7 @@ CurrentSquad=Aktuelles Team
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 foxtrick.tweaks.actions=Aktionen
 foxtrick.tweaks.writeinguestbook=Eintrag im Gästebuch verfassen
-foxtrick.tweaks.copyplayerad=Spieleranzeige in die Zwischenablage kopieren
+foxtrick.tweaks.copyplayerad=Spieleranzeige kopieren
 foxtrick.tweaks.copied=Die Spieleranzeige wurde in die Zwischenablage kopiert.
 
 ratings.HatStats=HatStats
@@ -690,19 +690,19 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
-CopyRatings.both=Ratings kopieren (HT-ML Code style)
-CopyRatings.home=Ratings der Heimmannschaft kopieren (HT-ML Code style)
-CopyRatings.away=Ratings der Auswärtsmannschaft kopieren (HT-ML Code style)
+CopyRatings.both=Ratings kopieren (in HT-ML)
+CopyRatings.home=Ratings der Heimmannschaft kopieren (in HT-ML)
+CopyRatings.away=Ratings der Auswärtsmannschaft kopieren (in HT-ML)
 CopyRatings.copied=Die Ratings wurden in die Zwischenablage kopiert.
 
 CopyYouth.title=Jugendkopierfunktionen
-CopyYouth.trainingReport=Kopiere Trainingsreport in die Zwischenablage
+CopyYouth.trainingReport=Kopiere Trainingsreport
 CopyYouth.trainingReport.copied=Trainingsreport wurde in die Zwischenablage kopiert.
-CopyYouth.scoutComment=Scoutbericht in Zwischenablage Kopieren
+CopyYouth.scoutComment=Scoutbericht kopieren
 CopyYouth.scoutComment.copied=Der Scoutbericht wurde in die Zwischenablage kopiert.
-CopyYouth.playerSource=Kopiere HTML Quellcode in die Zwischenablage
+CopyYouth.playerSource=Kopiere HTML Quellcode
 CopyYouth.playerSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert
-CopyYouth.fixturesSource=Kopiere HTML Quellcode in die Zwischenablage
+CopyYouthCopyYouth.fixturesSource=Kopiere HTML Quellcode
 CopyYouth.fixturesSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert.
 CopyYouth.goto=Gehe zu %s
 
@@ -1021,7 +1021,7 @@ delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?\n FireFo
 disable_all_foxtrick_modules_ask=Sollen wirklich alle Module deaktiviert werden?\n
 
 foxtrick.prefs.AdditionalOptions=Erweiterte Einstellungen
-foxtrick.prefs.smallcopyicons=Kleine Copy icons anstelle von einer extra Box
+foxtrick.prefs.smallcopyicons=Kleine Copyicons anstelle von einer extra Box
 foxtrick.prefs.DisplayHTMLDebugOutput=Anzeige von Debuginformationen auf der Hattrickseite (für Entwickler)
 
 
