--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -955,6 +955,12 @@ sort.down=Опадајуће
 action.clearCache=Обриши кеш
 action.clearCache.title=Брише Фокатрикову Xml кеш меморију. Фокстрик скида додатне информације са Хеттрик сервера на ваш захтев. Све док не затворите ваш интернет пргледник, Фокстрик ће користити податке који су локално сачувани. У ретким случајевима ови подаци могу бити ѕастарели. Обришите Фокстрикову кеш меморију да скинете те додатне информације поново.
 
+# fennec ui 
+pageAction.rightSidebar=Прикажи десни бар
+pageAction.mainContent=Прикажи главни садржај
+pageAction.leftSidebar=Прикажи леви бар
+pageAction.all=Прикажи све
+
 # buttons
 button.ok=Потврди
 button.cancel=Одустани
